--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  background-color: #E3E8E1;
+  min-height: 100vh;
+  z-index: 1;
+  position: relative;
+  overflow: hidden;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -14,17 +13,67 @@
 }
 
 .App-header {
-  min-height: 100vh;
+  background-color: #315C3B;
+  max-height: 200vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  text-align: left;
+  font-size: 7vh;
+  padding-left: 20vh;
+  color: #EFFFCD;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight: bold;
 }
 
 .App-link {
   color: #61dafb;
 }
+
+#photo-icon {
+  border-radius: 7vh;
+  background: #FFFFFF;
+  width: 25vh;
+  height: 25vh;
+  margin-left: 65%;
+  margin-top: 20vh;
+  z-index: 2;
+  position: absolute;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
+}
+
+#chatting {
+  border-radius: 7vh;
+  background: #FFFFFF;
+  width: 70%;
+  height: 10vh;
+  margin-top: 50vh;
+  margin-left: 20%;
+  box-shadow: inset 2px 5px 5px 2px #C5C5C5;
+  z-index: 2;
+  position: absolute;
+}
+
+#location {
+  border-radius: 7vh;
+  width: 6vh;
+  height: 6vh;
+  margin-left: 2%;
+  background: #D7E6B8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  z-index: 2;
+  position: absolute;
+}
+
+#location-icon {
+  border-radius: 7vh;
+  width: 4vh;
+  height: 4vh;
+  margin-top: 25%;
+  margin-left: 15%;
+}
+
+
 
 @keyframes App-logo-spin {
   from {
