--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,11 @@
   margin-left: 15%;
 }
 
+.login-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 
 @keyframes App-logo-spin {
