--- a/src/App.css
+++ b/src/App.css
@@ -24,11 +24,78 @@
   color: #EFFFCD;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-weight: bold;
+  z-index: 1;
+  position: relative;
 }
 
 .App-link {
   color: #61dafb;
 }
+
+.Login-items {
+  margin-top: 5%;
+  margin-left: 60%;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  z-index: 1;
+  position: relative;
+  overflow: hidden;
+}
+
+#login-photo {
+  z-index: 2;
+  position: absolute;
+  max-width: 50%;
+  height: 75%;
+  opacity: 0.7;
+}
+
+#login-title {
+  color: #315C3B;
+  font-size: 5vh;
+}
+
+#logout-button {
+  z-index: 2;
+  position: absolute;
+  color: #EFFFCD;
+  border-bottom: #EFFFCD;
+  padding: 0;
+  border: none;
+  background: none;
+  display: flex;
+  margin-left: 90%;
+  margin-top: 10px;
+  cursor: pointer;
+  font-size: 2.5vh;
+  opacity: 0.6;
+}
+
+#login-button {
+  margin-left: 75%;
+  z-index: 2;
+  position: absolute;
+  color: #EFFFCD;
+  border-bottom: #EFFFCD;
+  padding: 0;
+  border: none;
+  background: none;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
+#register-button {
+  margin-left: 80%;
+  z-index: 2;
+  position: absolute;
+  color: #EFFFCD;
+  border-bottom: #EFFFCD;
+  padding: 0;
+  border: none;
+  background: none;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
 
 #photo-icon {
   border-radius: 7vh;
