--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,8 @@
 .App {
   background-color: #E3E8E1;
-  min-height: 100vh;
+  min-height: 110vh;
   z-index: 1;
   position: relative;
-  overflow: hidden;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -43,7 +42,6 @@
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   z-index: 1;
   position: relative;
-  overflow: hidden;
 }
 
 .login-wrapper {
@@ -54,8 +52,8 @@
 
 .Carousel-items {
   padding-left: 18vh;
-  width: 50%;
-  height: 50%;
+  width: 40%;
+  height: 40%;
 }
 
 #login-photo {
@@ -128,32 +126,32 @@
 #chatting {
   border-radius: 7vh;
   background: #FFFFFF;
-  width: 70%;
-  height: 10vh;
-  margin-top: 50vh;
-  margin-left: 20%;
+  width: 35%;
+  height: 7vh;
+  margin-top: 5%;
+  margin-left: 11%;
   box-shadow: inset 2px 5px 5px 2px #C5C5C5;
   z-index: 2;
   position: absolute;
 }
 
-#location {
-  border-radius: 7vh;
-  width: 6vh;
-  height: 6vh;
-  margin-left: 2%;
-  background: #D7E6B8;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  z-index: 2;
+#location-icon {
+  border-radius: 5vh;
+  width: 3vh;
+  height: 3vh;
+  margin-left: 5%;
+  margin-top: 3%;
+  z-index: 3;
   position: absolute;
 }
 
-#location-icon {
-  border-radius: 7vh;
-  width: 4vh;
-  height: 4vh;
-  margin-top: 25%;
+#location-input {
   margin-left: 15%;
+  margin-top: 3%;
+  z-index: 2;
+  position: absolute;
+  background: transparent;
+  border: none;
 }
 
 #carousel-left {
