--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@
   position: relative;
 }
 
+*:focus {
+  outline: none;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -136,20 +140,20 @@
 }
 
 #location-icon {
-  border-radius: 5vh;
   width: 3vh;
   height: 3vh;
-  margin-left: 5%;
-  margin-top: 5%;
+  padding-top: 10px;
+  padding-left: 13px;
   z-index: 3;
   position: absolute;
 }
 
 #location-input {
-  margin-left: 15%;
-  margin-top: 5%;
   z-index: 2;
-  width: 70%;
+  width: 60%;
+  padding-top: 17px;
+  padding-left: 45px;
+  height: 2vh;
   position: absolute;
   background: transparent;
   border: none;
