--- a/src/App.css
+++ b/src/App.css
@@ -141,10 +141,11 @@
 
 #choose-file {
   margin-left: 73.5%;
-  margin-top: 14vh;
+  margin-top: 16vh;
   z-index: 2;
   position: absolute;
   font-size: 13px;
+  opacity: 0.7;
 }
 
 #file-button1 {
@@ -155,6 +156,7 @@
   vertical-align: middle;
   cursor: pointer;
   border: none !important;
+  opacity: 0.7;
 }
 
 input[type=file]::file-selector-button {
@@ -170,11 +172,13 @@ input[type=file]::file-selector-button {
 
 
 #file-button2 {
+  margin-top: 1vh;
   padding: 6px;
   border: none;
   border-radius: 7px;
   cursor: pointer;
   font-size: 12px;
+  opacity: 0.7;
 }
 
 #chatting {
@@ -245,6 +249,24 @@ input[type=file]::file-selector-button {
   text-align: center;
   font-size: 60px;
   opacity: 0.6;
+
+  border-radius: 12vh;
+  transform: scale(1);
+  animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.90);
+  }
+
+  70% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(0.90);
+  }
 }
 
 #weather-numb {
@@ -254,11 +276,11 @@ input[type=file]::file-selector-button {
   border-bottom: #EFFFCD;
   border: none;
   background: none;
-  margin-left: 43vh;
-  margin-top: 19vh;
+  margin-left: 32vh;
+  margin-top: 23vh;
   text-align: center;
-  font-size: 20px;
-  opacity: 0.8;
+  font-size: 18px;
+  opacity: 0.5;
 }
 
 @keyframes App-logo-spin {
