--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,21 @@
 #login-title {
   color: #315C3B;
   font-size: 5vh;
+
+  animation-duration: 3s;
+  animation-name: slidein;
+}
+
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
 }
 
 #logout-button {
