--- a/src/App.css
+++ b/src/App.css
@@ -155,9 +155,8 @@
 }
 
 #choose-file {
-  margin-left: 73.5%;
-  margin-top: 16vh;
   z-index: 2;
+  padding-left: 110%;
   position: absolute;
   font-size: 13px;
   opacity: 0.7;
