--- a/src/App.css
+++ b/src/App.css
@@ -327,7 +327,7 @@ input[type=file]::file-selector-button {
 }
 
 .layout {
-  padding-left: 70%;
+  padding-left: 60%;
   padding-top: 350px;
   width: 15%;
   height: 15%;
@@ -338,7 +338,7 @@ input[type=file]::file-selector-button {
 #rating {
   z-index: 4;
   position: absolute;
-  padding-left: 70%;
+  padding-left: 59.5%;
   padding-top: 370px;
   width: 15%;
   height: 15%;
@@ -353,7 +353,7 @@ input[type=file]::file-selector-button {
 #rating-small {
   z-index: 4;
   position: absolute;
-  padding-left: 1.5%;
+  padding-left: 2.5%;
   width: 15%;
   height: 15%;
   font-weight: 600;
@@ -362,6 +362,20 @@ input[type=file]::file-selector-button {
   text-align: center;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+
+#rating-box {
+  z-index: 4;
+  position: absolute;
+  margin-left: 77%;
+  margin-top: 290px;
+  width: 40vh;
+  height: 40vh;
+  border-radius: 7vh;
+  background: #FFFFFF;
+  opacity: 0.65;
+}
+
+
 
 .slide {
   display: none !important;
