--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 
 .App-header {
   background-color: #315C3B;
-  max-height: 200vh;
+  max-height: 180vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -37,8 +37,10 @@
 }
 
 .Top-picks {
-  padding-left: 20vh;
+  padding-left: 23vh;
   color: #315C3B;
+  font-weight: bold 600;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 .Login-items {
@@ -247,7 +249,6 @@ input[type=file]::file-selector-button {
   display: flex;
   margin-left: 87%;
   margin-top: 35px;
-  cursor: pointer;
   font-size: 2.5vh;
   opacity: 0.6;
 }
@@ -372,7 +373,7 @@ input[type=file]::file-selector-button {
   height: 40vh;
   border-radius: 7vh;
   background: #FFFFFF;
-  opacity: 0.65;
+  opacity: 0.6;
 }
 
 
